commit translated contents

--- a/data-explorer/index.yml
+++ b/data-explorer/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: orspod
   ms.author: orspodek
   ms.date: 03/19/2020
-  ms.openlocfilehash: 19fee896eb9e3d6dd857b8c85bd7962b820ff3b3
-  ms.sourcegitcommit: 041272af91ebe53a5d573e9902594b09991aedf0
+  ms.openlocfilehash: f69be915c7e8913dddc426833c74a058e08d55a9
+  ms.sourcegitcommit: 62eff65b320ce4ca53eabed6156eb9fe5b77f548
   ms.translationtype: HT
   ms.contentlocale: fr-FR
-  ms.lasthandoff: 09/29/2020
-  ms.locfileid: "91452695"
+  ms.lasthandoff: 02/01/2021
+  ms.locfileid: "99224143"
 landingContent:
 - title: À propos d’Azure Data Explorer
   linkLists:
@@ -22,18 +22,16 @@ landingContent:
     links:
     - text: Qu’est-ce que l’Explorateur de données Azure ?
       url: data-explorer-overview.md
-  - linkListType: whats-new
-    links:
-    - text: Pour découvrir les nouveautés d’Azure Data Explorer, assistez à notre événement en ligne le 14 octobre 2020
-      url: https://azuredataexplorer.events.idloom.com/azure-data-explorer-online-event
   - linkListType: video
     links:
     - text: Qu’est-ce que l’Explorateur de données Azure ? (19:47)
       url: https://youtu.be/D_AJk2lAepw
-    - text: 'Pluralsight : How to Start with Microsoft Azure Data Explorer'
-      url: https://www.pluralsight.com/courses/microsoft-azure-data-explorer-starting
-    - text: 'Pluralsight : Les bases du langage de requête Kusto (KQL)'
-      url: https://www.pluralsight.com/courses/kusto-query-language-kql-from-scratch
+- title: Entrainement
+  linkLists:
+  - linkListType: learn
+    links:
+    - text: 'Formations Pluralsight gratuites : Explorateur de données Azure'
+      url: https://www.pluralsight.com/partners/microsoft/azure-data-explorer
 - title: Créer un cluster et une base de données
   linkLists:
   - linkListType: quickstart
