--- a/data-explorer/toc.yml
+++ b/data-explorer/toc.yml
@@ -1,6 +1,6 @@
 - name: Documentation Azure Data Explorer
   href: index.yml
-- name: Vue d'ensemble
+- name: Vue d’ensemble
   items:
     - name: "Qu’est-ce que l’Explorateur de données Azure\_?"
       href: data-explorer-overview.md
@@ -1224,6 +1224,8 @@
           href: ./kusto/query/rowcumsumfunction.md
         - name: row_number()
           href: ./kusto/query/rownumberfunction.md
+        - name: row_rank()
+          href: ./kusto/query/rowrankfunction.md
         - name: row_window_session()
           href: ./kusto/query/row-window-session-function.md
     - name: Analyse de série chronologique
