commit translated contents

--- a/data-explorer/toc.yml
+++ b/data-explorer/toc.yml
@@ -4,7 +4,7 @@
   items:
     - name: "Qu’est-ce que l’Explorateur de données Azure\_?"
       href: data-explorer-overview.md
-    - name: Nouveautés d’Azure Data Explorer
+    - name: Nouveautés
       href: whats-new.md
 - name: Démarrages rapides
   expanded: true
